fix(transition): make it more smooth on mobile devices

--- a/source/css/_files/appbar.scss
+++ b/source/css/_files/appbar.scss
@@ -5,13 +5,16 @@ $main-class: theme-appbar;
   background-color: #000;
   width: 18px;
   height: 2px;
-  animation-duration: 300ms;
-  animation-timing-function: ease-in-out;
+  -webkit-animation-duration: 300ms;
+          animation-duration: 300ms;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
 }
 
 .#{$main-class} {
   width: auto;
   border-bottom: 1px solid #ddd;
+  -webkit-transition: padding .3s cubic-bezier(0,0,.2,1);
   transition: padding .3s cubic-bezier(0,0,.2,1);
   @media (min-width: 1024px) {
     body.mdui-drawer-body-left & {
@@ -26,10 +29,12 @@ $main-class: theme-appbar;
     width: 100%;
     height: 5px;
     content: "";
+    -webkit-transition: opacity 0.4s;
     transition: opacity 0.4s;
     pointer-events: none;
     opacity: 0;
-    box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
+            box-shadow: inset 0px 5px 6px -3px rgba(0, 0, 0, 0.4);
     will-change: opacity;
   }
   &.#{$main-class}--shadow:after {
@@ -57,17 +62,20 @@ $main-class: theme-appbar;
     }
   }
   &.#{$sub-class}--menu span {
-    animation-name: burger-menu;
+    -webkit-animation-name: burger-menu;
+            animation-name: burger-menu;
     &:before {
       @include burger-shared;
-      animation-name: burger-menu-before;
+      -webkit-animation-name: burger-menu-before;
+              animation-name: burger-menu-before;
       content: '';
       top: -5px;
       left: 0;
     }
     &:after {
       @include burger-shared;
-      animation-name: burger-menu-after;
+      -webkit-animation-name: burger-menu-after;
+              animation-name: burger-menu-after;
       content: '';
       top: 5px;
       left: 0;
@@ -77,71 +85,149 @@ $main-class: theme-appbar;
     @include burger-shared;
     top: 11px;
     left: 3px;
-    animation-name: burger-arrow;
-    animation-fill-mode: forwards;
+    -webkit-animation-name: burger-arrow;
+            animation-name: burger-arrow;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
     &:before {
       @include burger-shared;
       content: '';
       left: 0;
       top: -5px;
-      animation-name: burger-arrow-before;
-      animation-fill-mode: forwards;
+      -webkit-animation-name: burger-arrow-before;
+              animation-name: burger-arrow-before;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards;
     }
     &:after {
       @include burger-shared;
       content: '';
       left: 0;
       top: 5px;
-      animation-name: burger-arrow-after;
-      animation-fill-mode: forwards;
+      -webkit-animation-name: burger-arrow-after;
+              animation-name: burger-arrow-after;
+      -webkit-animation-fill-mode: forwards;
+              animation-fill-mode: forwards;
     }
   }
 }
 
-@keyframes burger-arrow {
+@-webkit-keyframes burger-arrow {
+  0% { }
   100% {
-    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes burger-arrow {
+  0% { }
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@-webkit-keyframes burger-arrow-before {
+  0% { }
+  100% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 12px;
+    margin: 0 9px;
+    top: -3.5px;
   }
 }
 
 @keyframes burger-arrow-before {
+  0% { }
   100% {
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
     width: 12px;
     margin: 0 9px;
     top: -3.5px;
+  }
+}
+
+@-webkit-keyframes burger-arrow-after {
+  0% { }
+  100% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    width: 12px;
+    margin: 0 9px;
+    top: 3.5px;
   }
 }
 
 @keyframes burger-arrow-after {
+  0% { }
   100% {
-    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
     width: 12px;
     margin: 0 9px;
     top: 3.5px;
   }
+}
+
+@-webkit-keyframes burger-menu {
+  0% {
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+  100% { }
 }
 
 @keyframes burger-menu {
   0% {
-    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
   }
+  100% { }
 }
 
-@keyframes burger-menu-before {
+@-webkit-keyframes burger-menu-before {
   0% {
-    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
     width: 12px;
     margin: 0 9px;
     top: -3.5px;
   }
+  100% { }
 }
 
-@keyframes burger-menu-after {
+@keyframes burger-menu-before {
   0% {
-    transform: rotate(-45deg);
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    width: 12px;
+    margin: 0 9px;
+    top: -3.5px;
+  }
+  100% { }
+}
+
+@-webkit-keyframes burger-menu-after {
+  0% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
     width: 12px;
     margin: 0 9px;
     top: 3.5px;
   }
+  100% { }
+}
+
+@keyframes burger-menu-after {
+  0% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    width: 12px;
+    margin: 0 9px;
+    top: 3.5px;
+  }
+  100% { }
 }
