--- a/source/css/_files/global.scss
+++ b/source/css/_files/global.scss
@@ -16,7 +16,8 @@ span.theme-menu-badge {
   font-size: 1rem;
   line-height: 22px;
   float: right;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   min-width: 3rem;
   height: 22px;
   margin-left: 14px;
